--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Services</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#feature-one">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="#feature-two" tabindex="-1">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-danger" href="#">Contact Us</a>
+                    <a class="btn btn-danger" href="#feature-five">Contact Us</a>
                 </li>
           </ul>
           
