bug:fixed some spacing

--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
                 </div>
 
                 <div class="mt-2">
-                    <h5 class="py-2">Questions and Suggestions...? Send us a message</h5>
+                    <h5 class="py-2">Questions? Suggestions?</h5>
+                    <h5 class="py-2">Send us a message</h5>
 
                     <form action="./contactForm.php" method="POST" name="contact">
                         <div class="form-group">
