--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <h5 class="py-2">Questions? Suggestions?</h5>
                     <h5 class="py-2">Send us a message</h5>
 
-                    <form action="./contactForm.php" method="POST" name="contact">
+                    <form action="contactForm.php" method="POST" name="contact">
                         <div class="form-group">
                           <label for="exampleFormControlInput1">Name</label>
                           <input type="name" class="form-control" name="name" id="exampleFormControlInput1" placeholder="your name" required>
